[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agarase-score"
version = "0.1.0"
description = "Architecture-based scoring of agarolytic PULs and candidate agarase supplementation targets."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Chungmin Kim"}
]
dependencies = [
  "pandas>=1.5"
]

[project.scripts]
agarase-score = "agarase_score.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
