[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsar-agarase"
version = "0.1.0"
description = "PULSAR: PUL-based Selection of AgaRase."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Chungmin Kim"}
]
dependencies = [
  "pandas>=1.5"
]

[project.scripts]
pulsar = "pulsar_agarase.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
